kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spartakus-collector
  labels:
    app: spartakus-collector
spec:
  selector:
    app: spartakus-collector
  type: NodePort
  ports:
    - name: http
      port: 80
